# rs-avro-transcode

./: Cargo.toml  README.md  rs-avro-transcode  rs-avro-transcode.wasm  run.sh
sample.d/: sample.avro  sample.avsc  sample.jsonl
src/: enc.rs  main.rs
