[package]
name = "rs-avro-transcode"
version = "0.1.0"
edition = "2021"

description = "Converts AVRO(e.g, no compression -> deflate)"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-avro-transcode/latest"
repository = "https://github.com/takanoriyanagitani/rs-avro-transcode"
keywords = [
	"avro",
	"transcode",
]
categories = [
	"command-line-interface",
	"command-line-utilities",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.apache-avro]
version = "0.17.0"
features = [
	"snappy",
]

[features]
default = [
	"enable_bzip",
	"enable_xz",
	"enable_zstd",
]

enable_bzip = ["apache-avro/bzip"]
enable_xz = ["apache-avro/xz"]
enable_zstd = ["apache-avro/zstandard"]
